.cicd/aks/deploy-aks.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: titanic-ai-demo-webapp
  namespace: titanic-ai-demo
  labels:
    app: titanic-ai-demo-webapp
spec:
  replicas: 1
  revisionHistoryLimit: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: titanic-ai-demo-webapp
  template:
    metadata:
      labels:
        app: titanic-ai-demo-webapp
    spec:
      containers:
      - name: titanic-ai-demo-webapp
        image: qbituniverse/titanic-ai-webapp:latest
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
            add: ["NET_BIND_SERVICE"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: titanic-ai-demo-api
  namespace: titanic-ai-demo
  labels:
    app: titanic-ai-demo-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: titanic-ai-demo-api
  template:
    metadata:
      labels:
        app: titanic-ai-demo-api
    spec:
      restartPolicy: Always
      containers:
      - name: titanic-ai-demo-api
        image: qbituniverse/titanic-ai-api:latest
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
            add: ["NET_BIND_SERVICE"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "400m"
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: titanic-ai-demo-webapp
  namespace: titanic-ai-demo
spec:
  selector:
    app: titanic-ai-demo-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: titanic-ai-demo-api
  namespace: titanic-ai-demo
spec:
  selector:
    app: titanic-ai-demo-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titanic-ai-demo-webapp
  namespace: titanic-ai-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - demo-aks.domain.com
    secretName: tls-secret
  rules:
  - host: demo-aks.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: titanic-ai-demo-webapp
            port:
              number: 80
